--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
 		"lint": "biome lint",
 		"lint:fix": "biome lint --write",
 		"format": "biome format",
-		"format:fix": "biome format --write"
+		"format:fix": "biome format --write",
+		"test": "vitest run",
+		"test:watch": "vitest"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.4",
 		"@builder.io/mitosis-cli": "^0.10.0",
 		"esbuild": "^0.25.4",
-		"typescript": "^5.0.0"
+		"typescript": "^5.0.0",
+		"vitest": "^3.1.3"
 	},
 	"peerDependencies": {
 		"@builder.io/mitosis-cli": "^0.10.0"
