--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
 		"format": "biome format",
 		"format:fix": "biome format --write",
 		"test": "vitest run",
-		"test:watch": "vitest"
+		"test:watch": "vitest",
+		"coverage": "vitest run --coverage"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.4",
 		"@builder.io/mitosis": "^0.10.0",
 		"@builder.io/mitosis-cli": "^0.10.0",
+		"@vitest/coverage-v8": "3.1.3",
 		"esbuild": "^0.25.4",
 		"typescript": "^5.0.0",
 		"vitest": "^3.1.3"
