--- a/package.json
+++ b/package.json
@@ -1,21 +1,40 @@
 {
 	"name": "mitosis-import-plugin",
 	"type": "module",
+	"version": "0.1.0",
+	"files": ["dist"],
+	"exports": {
+		"esbuild": {
+			"types": "./dist/esbuild.d.ts",
+			"import": "./dist/esbuild.js",
+			"require": "./dist/esbuild.cjs"
+		},
+		"*": {
+			"types": "./dist/*.d.ts",
+			"import": "./dist/*.js",
+			"require": "./dist/*.cjs"
+		}
+	},
 	"scripts": {
+		"build": "rslib build",
 		"lint": "biome lint",
 		"lint:fix": "biome lint --write",
 		"format": "biome format",
 		"format:fix": "biome format --write",
 		"test": "vitest run",
 		"test:watch": "vitest",
-		"coverage": "vitest run --coverage"
+		"coverage": "vitest run --coverage",
+		"publint": "publint"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.4",
 		"@builder.io/mitosis": "^0.10.0",
 		"@builder.io/mitosis-cli": "^0.10.0",
+		"@microsoft/api-extractor": "^7.52.8",
+		"@rslib/core": "^0.7.1",
 		"@vitest/coverage-v8": "3.1.3",
 		"esbuild": "^0.25.4",
+		"publint": "^0.3.12",
 		"typescript": "^5.0.0",
 		"vitest": "^3.1.3"
 	},
