docs(Example): use tsx for the mitosis code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-	"conventionalCommits.scopes": ["Core", "Esbuild"]
+	"conventionalCommits.scopes": [
+		"Core",
+		"Esbuild",
+		"Example"
+	]
 }
