--- a/example/package.json
+++ b/example/package.json
@@ -3,16 +3,14 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "node --experimental-strip-types ./scripts/dev.ts",
+    "dev": "bun ./scripts/dev.ts",
     "build": "bun ./scripts/build.ts"
   },
   "devDependencies": {
     "@types/bun": "latest",
-    "@types/live-server": "^1.2.3",
     "@types/react": "^19.1.4",
     "@types/react-dom": "^19.1.5",
     "esbuild": "^0.25.4",
-    "live-server": "^1.2.2",
     "mitosis-import-plugin": "^0.1.4"
   },
   "peerDependencies": {
